- polkit: only use pkexec when not already root

Version 7.28 - 5 November 2013

- library:
  o fix parsing download progress with rsync >= 3.10
- urpmi:
  o add support for --deploops option (needs URPM-4.29+)

Version 7.27.5 - 13 October 2013, by Colin Guthrie

- use polkit for authorisation (mga#11125)

Version 7.27.4 - 4 October 2013, by Thierry Vignaud

- library:
  o adapt to perl-5.18
  o prevent disabling removing orphan if we failed to detect running kernel
    version

Version 7.27.3 - 30 May 2013, by Thierry Vignaud

- library:
  o revert fix for mga#10254 in previous release
    (the bug was in media.cfg, mga#10335)

Version 7.27.2 - 24 May 2013, by Thierry Vignaud

- library:
  o ensure priority updates are installed in a single transaction
  o fix wrongly enabling backports/testing for tainted/nonfree when
    such packages are already installed (mga#10254)

Version 7.27.1 - 17 May 2013, by Thierry Vignaud

- library:
  o really auto enable tainted media if needed when adding distrib media

Version 7.27 - 17 May 2013, by Thierry Vignaud

- gurpmi2:
  o like urpmi/rpmdrake/drakx, display all errors at once at end
    instead of forcing users to click in order to continue
    transactions (mga#6086)
  o do not popup errors at end in auto mode
- library (mga#8368, #8379 & #9758):
  o enable to see if nonfree/tainted packages are installed
  o auto enable nonfree/tainted media if needed when adding distrib media

Version 7.26 - 2 May 2013, by Thierry Vignaud

- gurpmi2:
  o sort package list
- library:
  o fix displaying removed package name in gurpmi/rpmdrake (mga#9545)

Version 7.25 - 21 April 2013, by Thierry Vignaud

- library:
  o enable rpmdrake to not use modal dialogs (mga#9646)
  o fix leaving read locks on rpmdb (mga#9248)

Version 7.24 - 18 April 2013, by Thierry Vignaud

- library:
  o display exceptions that happened while downloading (mga#9529)
- urpmi:
  o fix package count when a package has a %pretrans scriptlet
