@@ -1,3 +1,4 @@
+- use /proc/self/mountinfo for ro filesystem checks mga#11319
 - polkit: only use pkexec when not already root
 
 Version 7.28 - 5 November 2013
